# Vox

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
crates/vox/: Cargo.toml
crates/vox-core/: Cargo.toml
crates/vox-core/src/: audio.rs  engine.rs  jitter.rs  lib.rs  net.rs  packet.rs  receive.rs  resample.rs  send.rs
crates/vox/src/: cli.rs  config.rs  device.rs  logging.rs  main.rs  timer.rs  tui.rs
docs/: APOLLO.md  CONVENTIONS.md  DESIGN.md  PLAN.md
samples/: client.toml  host.toml  vox.toml
scripts/: run.cmd  run.ps1  tui-demo.cmd
src/: audio.rs  device.rs  loopback.rs  main.rs  net.rs  receive.rs  send.rs  smoke.rs
