[workspace]
members = ["crates/vox-core", "crates/vox"]
resolver = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

# Windows/MSVC: build the bundled libopus C dep (audiopus_sys via cmake) optimized
# even in dev so it links the release CRT (/MD), matching rustc — otherwise debug
# builds fail to link with unresolved `_CrtDbgReportW`. Our own crates stay
# unoptimized/debuggable. (Workspace-level: package profile overrides live here.)
[profile.dev.package.audiopus_sys]
opt-level = 3
