[package]
name = "vox-core"
version = "0.1.0"
edition = "2021"
description = "vox engine: Opus codec + UDP transport + jitter buffer (platform-agnostic, no audio I/O)"
license = "MIT OR Apache-2.0"

[dependencies]
# Codec (bundled libopus; needs cmake + a C compiler).
opus = "0.3"
# SPSC lock-free ring buffer (capture ring + jitter buffer).
ringbuf = "0.4"
anyhow = "1"
log = "0.4"
rubato = "0.16"
