[package]
name = "vox"
version = "0.1.0"
edition = "2021"
description = "Free, headless, bidirectional real-time voice pipe over LAN UDP"
license = "MIT OR Apache-2.0"

[[bin]]
name = "vox"
path = "src/main.rs"

[dependencies]
vox-core = { path = "../vox-core" }

# Audio I/O (desktop platform layer).
cpal = "0.16"

# CLI + config (wired up at M6b).
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"

anyhow = "1"
log = "0.4"
env_logger = "0.11"
