[package]
name = "vox"
version = "0.2.0"
edition = "2021"
description = "Free, headless, bidirectional real-time voice pipe over LAN UDP"
license = "MIT OR Apache-2.0"

[[bin]]
name = "vox"
path = "src/main.rs"

[dependencies]
vox-core = { path = "../vox-core" }

# Audio I/O (desktop platform layer).
cpal = "0.16"

# CLI + config.
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Cross-platform stop signal (Ctrl+C / SIGINT / SIGTERM / Windows console close).
ctrlc = "3"

# Live TUI dashboard (--output tui). Re-exports crossterm for events/backend.
ratatui = "0.29"

anyhow = "1"
log = "0.4"
env_logger = "0.11"
